--- a/InitializrSpringbootProject/src/main/resources/messages_en.properties
+++ b/InitializrSpringbootProject/src/main/resources/messages_en.properties
@@ -4,9 +4,16 @@ aplicacion.titulo=Electric car store
 plantilla.clientes=Clients
 plantilla.categorias=Categories
 plantilla.articulos=Articles
+plantilla.articulos.editar=Edit items
 plantilla.derechos=All Rights Reserved 2022
 
 index.titulo=Our Articles
+recarga.puntos=Charging points
+recarga.informacion=Information
+
+mantenimiento.puntos=Maintenance points
+mantenimiento.informacion=More information
+
 
 articulo.datos=Article Data
 articulo.titulo=List of articles
@@ -45,6 +52,9 @@ accion.eliminar=Delete
 accion.actualizar=Update
 accion.guardar=Save
 accion.regresar=Return
+
+
+plantilla.saludo=Welcome
 
 plantilla.logout =logout
 
