--- a/InitializrSpringbootProject/src/main/resources/messages_es.properties
+++ b/InitializrSpringbootProject/src/main/resources/messages_es.properties
@@ -5,8 +5,13 @@ plantilla.clientes=Clientes
 plantilla.categorias=Categor\u00edas
 plantilla.articulos=Art\u00edculos
 plantilla.derechos=Derechos Reservados 2022
-
+plantilla.articulos.editar=Editar Art\u00edculos
 index.titulo=Nuestros Art\u00edculos
+
+recarga.puntos=Puntos de recarga
+recarga.informacion=Informaci\u00f3n
+mantenimiento.puntos=Puntos de mantenimiento
+mantenimiento.informacion=M\u00e1s informaci\u00f3n
 
 articulo.datos=Datos del Art\u00edculo
 articulo.titulo=Listado de art\u00edculos
@@ -45,6 +50,8 @@ accion.eliminar=Eliminar
 accion.actualizar=Actualizar
 accion.guardar=Guardar
 accion.regresar=Regresar
+
+plantilla.saludo=Bienvenido
 
 plantilla.logout =salir
 
