--- a/InitializrSpringbootProject/src/main/resources/messages_en.properties
+++ b/InitializrSpringbootProject/src/main/resources/messages_en.properties
@@ -14,7 +14,7 @@ recarga.informacion=Information
 mantenimiento.puntos=Maintenance points
 mantenimiento.informacion=More information
 
-
+carrito.verCarrito = Cart
 articulo.datos=Article Data
 articulo.titulo=List of articles
 articulo.nuevo=New Article
@@ -26,7 +26,8 @@ articulo.existencias=Stocks
 articulo.activo=Active
 articulo.comprar=Buy
 articulo.no_mostrar=We have no articles to show
-
+articulo.cantidad =Quantity
+articulo.total= Total
 cliente.datos=Client Data
 cliente.titulo=Client List
 cliente.nuevo=New Client
@@ -90,3 +91,11 @@ login.login=Autenticar
 e403.titulo=Acceso denegado
 
 e403.texto=No tiene permisos para ver esta p\u00e1gina o ejecutar esta acci\u00f3n
+
+carrito.verCarrito = Cart
+carrito.titulo = Products
+carrito.cantidad = total
+carrito.total = total
+carrito.totalCompra= total of this purchase
+carrito.seguirComprando = Shoping
+carrito.facturar = Invoice this purchase
