--- a/InitializrSpringbootProject/src/main/resources/messages_es.properties
+++ b/InitializrSpringbootProject/src/main/resources/messages_es.properties
@@ -13,6 +13,8 @@ recarga.informacion=Informaci\u00f3n
 mantenimiento.puntos=Puntos de mantenimiento
 mantenimiento.informacion=M\u00e1s informaci\u00f3n
 
+carrito.verCarrito = Carrito
+
 articulo.datos=Datos del Art\u00edculo
 articulo.titulo=Listado de art\u00edculos
 articulo.nuevo=Nuevo Art\u00edculo
@@ -24,7 +26,8 @@ articulo.existencias=Existencias
 articulo.activo=Activo
 articulo.comprar=Comprar
 articulo.no_mostrar=No tenemos art\u00edculos que mostrar
-
+articulo.cantidad =Cantidad
+articulo.total= Total
 cliente.datos=Datos del Cliente
 cliente.titulo=Listado de Clientes
 cliente.nuevo=Nuevo Cliente
@@ -86,3 +89,11 @@ login.login=Autenticar
 e403.titulo=Acceso denegado
 
 e403.texto=No tiene permisos para ver esta p\u00e1gina o ejecutar esta acci\u00f3n
+
+carrito.verCarrito = Ver Carrito
+carrito.titulo = Productos del carrito
+carrito.cantidad = Cantidad
+carrito.total = total
+carrito.totalCompra= total de compra
+carrito.seguirComprando = Seguir comprando
+carrito.facturar = Facturar pedido
